feat(data-887): add ParkingArea.SpecificParkingAreaUsage for all parkings imported during GBFS parking import
- make GBFS parking import compliant with Netex France profile V1.2